# OhhMyyEngine3D

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/asset/: MeshData.h
include/asset/io/: GltfLoader.h
include/asset/processing/: MeshOptimize.h
include/core/: CommandBuffers.h  CommandPool.h  FrameRenderer.h  Framebuffers.h  GraphicsPipeline.h  ImageViews.h  Logger.h  RenderPass.h  RendererContext.h  StringUtils.h  Surface.h  SwapChain.h  SyncObjects.h  VulkanInstance.h  VulkanLogicalDevice.h  VulkanPhysicalDevice.h  VulkanRenderer.h  VulkanUtils.h  WindowManager.h
include/core/math/: MathUtils.h
include/input/: InputSystem.h
include/platform/: WindowManager.h
include/platform/guards/: GLFWInitializer.h  LoggerGuard.h
include/render/: Camera.h  CameraController.h  FreeCamera.h  LightManager.h  LightingGPU.h  MVP.h  OrbitCamera.h  Scene.h  ViewUniforms.h  WorkshopScene.h
include/render/materials/: Material.h  MaterialSystem.h
include/rhi/vk/: CommandBuffers.h  CommandPool.h  Common.h  DebugUtils.h  DepthResources.h  FrameRenderer.h  FrameResources.h  Framebuffers.h  GraphicsPipeline.h  ImageViews.h  RenderPass.h  RendererContext.h  Surface.h  SwapChain.h  SyncObjects.h  VulkanInstance.h  VulkanLogicalDevice.h  VulkanPhysicalDevice.h  VulkanRenderer.h  vk_utils.h
include/rhi/vk/gfx/: Buffer.h  DrawItem.h  Mesh.h  Texture2D.h  Vertex.h
include/rhi/vk/gfx/utils/: MeshUtils.h
include/rhi/vk/memoryManager/: AllocatedResource.h  MemoryHelpers.h  VulkanAllocator.h
include/ui/: ImGuiLayer.h
libs/: libs.cpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/imgui/: CMakeLists.txt
shaders/: frag.glsl  frag.spv  vert.glsl  vert.spv
src/: OhhMyyEngine3D.cpp  OhhMyyEngine3D.sln  OhhMyyEngine3D.vcxproj  OhhMyyEngine3D.vcxproj.filters  main.cpp
src/asset/io/: GltfLoader.cpp
src/asset/processing/: MeshOptimize.cpp
src/core/: CommandBuffers.cpp  CommandPool.cpp  FrameRenderer.cpp  Framebuffers.cpp  GraphicsPipeline.cpp  ImageViews.cpp  Logger.cpp  RenderPass.cpp  Surface.cpp  SwapChain.cpp  SyncObjects.cpp  VulkanInstance.cpp  VulkanLogicalDevice.cpp  VulkanPhysicalDevice.cpp  VulkanRenderer.cpp  WindowManager.cpp
src/input/: InputSystem.cpp
src/platform/: WindowManager.cpp
src/platform/guards/: GLFWInitializer.cpp  LoggerGuard.cpp
src/render/: CameraController.cpp  FreeCamera.cpp  LightManager.cpp  OrbitCamera.cpp  Scene.cpp  WorkshopScene.cpp
src/render/materials/: Material.cpp  MaterialSystem.cpp
src/rhi/vk/: CommandBuffers.cpp  CommandPool.cpp  DepthResources.cpp  FrameRenderer.cpp  Framebuffers.cpp  GraphicsPipeline.cpp  ImageViews.cpp  RenderPass.cpp  RendererContext.cpp  Surface.cpp  SwapChain.cpp  SyncObjects.cpp  VulkanInstance.cpp  VulkanLogicalDevice.cpp  VulkanPhysicalDevice.cpp  VulkanRenderer.cpp
src/rhi/vk/gfx/: Buffer.cpp  Mesh.cpp  Texture2D.cpp
src/ui/: ImGuiLayer.cpp
